--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -50,9 +50,10 @@
      <Compile Include="Assets\Scripts\BulletController.cs" />
      <Compile Include="Assets\Scripts\HealthScript.cs" />
      <Compile Include="Assets\Scripts\MovementController.cs" />
-     <Compile Include="Assets\Scripts\RendererExtensions.cs.cs" />
+     <Compile Include="Assets\Scripts\RendererExtensions.cs" />
      <Compile Include="Assets\Scripts\ScoreController.cs" />
      <Compile Include="Assets\Scripts\ScrollingScript.cs" />
+     <Compile Include="Assets\Scripts\SpawnController.cs" />
      <Compile Include="Assets\Scripts\TankController.cs" />
      <Compile Include="Assets\Scripts\TurretController.cs" />
      <Compile Include="Assets\Scripts\WeaponController.cs" />
